--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -41,7 +41,7 @@
     border: none;
    
     border-radius: 50%;
-    background-color: #111b69;
+    background-color: #75b00f;
     color: #fff;
     display: inline-block;
     width: 100px;
