--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,6 +1,6 @@
 .foot-wrapper
 {
-    background-image: url('../images/Asset 4@4x.png');
+    background-image: url('../images/Inca international congress logo.png');
     background-size: contain;
     background-position: center;
     color: #fff;
