--- a/src/css/important.css
+++ b/src/css/important.css
@@ -15,7 +15,7 @@
     width: 60%;
     color: #ffffff;
     text-align: center;
-    background: #111b69;
+    background: #75b00f;
     margin: 10px;
 }
 .important-dates-section .table .imp-table-date
