--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -25,7 +25,7 @@
 .theme-section .paragraph-box .common-para
 {
   font-size: 33px;
-  color: #f47216;
+  color: #75b00f;
   text-transform: uppercase;
   line-height: 46px;
   font-weight: bold;
@@ -56,7 +56,7 @@
   z-index: -1;
   top: -11px;
   right: -12px;
-  background: #f47216;
+  background: #75b00f;
   height: 40px;
   width: 40px;
   border-radius: 100%;
