--- a/src/css/common.css
+++ b/src/css/common.css
@@ -367,6 +367,20 @@ background-color:#fff;
 {
     padding: 0 8px;
 }
+
+.navbar-toggler {
+    background-color: #75b00f!important;
+    padding: 3px 10px!important;
+    
+}
+.navbar-toggler-icon
+{
+    background-image: none!important;
+    display: flex!important;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+}
   /* -----common responsive css---- */
   @media only screen and (max-width : 1024px) {
 
