--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -157,7 +157,7 @@
   margin-bottom: 15px!important;
 }
 .form-select{
-  margin-bottom: 15px;
+  margin-bottom: 15px2;
 }
 .accordion-button:not(.collapsed)
 {
