--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -5,6 +5,8 @@
     padding: 125px 0;
     display: flex;
     align-items: center;
+    background-position: center;
+    height: 70vh;
 }
 .common-redirect-banner::before {
     position: absolute;
