--- a/src/css/common.css
+++ b/src/css/common.css
@@ -227,6 +227,23 @@ border: none!important;
     margin-top: 30px;
     cursor: pointer;
 }
+.add-and-remove{
+    margin-top: 29px!important;
+    width: 200px;
+}
+.add-button{
+    padding: 8px 30px!important;
+    font-size: 12px!important;
+    border-radius: 0px!important;
+}
+.add-button-div{
+    margin-top: 29px!important;
+}
+.add-and-remove-button{
+    padding: 8px 17px!important;
+    border-radius: 0px!important;
+    font-size: 12px!important;
+}
 .create-btn
 {
     padding: 4px 20px !important;
