--- a/src/css/common.css
+++ b/src/css/common.css
@@ -231,10 +231,16 @@ border: none!important;
     margin-top: 29px!important;
     width: 200px;
 }
+.add-co-author-button{
+    padding: 23px 13px;
+}
 .add-button{
     padding: 8px 30px!important;
     font-size: 12px!important;
     border-radius: 0px!important;
+}
+.text-area-abtract{
+    min-height: 150px!important;
 }
 .add-button-div{
     margin-top: 29px!important;
@@ -243,6 +249,7 @@ border: none!important;
     padding: 8px 17px!important;
     border-radius: 0px!important;
     font-size: 12px!important;
+    margin-top: 9px;
 }
 .create-btn
 {
