--- a/src/css/common.css
+++ b/src/css/common.css
@@ -89,7 +89,7 @@ h1,h2,h3,h4,h5,h6
     font-weight: 400;
     line-height: 20.11px;
     color: #696A87;
-    font-size: 15px;
+    font-size: 14px;
     line-height: 20px;
 }
 .common-learn-more
@@ -543,9 +543,15 @@ background-color:#fff;
     {
         font-size:11px;
     }
+
+    .boxes .box-1 .right-text {
+        font-size: 11px!important;
+        font-weight: bolder!important;
+    }
+
     .common-para
     {
-        font-size:14px;
+        font-size:13px;
     }
     .common-redirect-banner{
         padding:100px 0!important;
