--- a/src/css/home.css
+++ b/src/css/home.css
@@ -417,6 +417,7 @@
     min-height: 29px;
     min-width: 32px;
     background: #75b00f;
+    margin-top: 18px;
 }
 .react-multiple-carousel__arrow--left 
 {
