--- a/src/css/common.css
+++ b/src/css/common.css
@@ -92,6 +92,13 @@ h1,h2,h3,h4,h5,h6
     font-size: 14px;
     line-height: 20px;
 }
+.action-btn {
+    background: #fff!important;
+    /* border: 0; */
+    padding: 5px 10px!important;
+    border: none!important;
+    color: #000708!important;
+}
 .common-learn-more
 {
     font-family: 'Mulish', sans-serif;
@@ -531,18 +538,19 @@ background-color:#fff;
 
         background: #212121;
     border-radius: 5px;
-    padding: 20px;
+    padding: 10px;
     display: flex;
     flex-direction: column;
     padding-left: 0;
     margin-bottom: 0;
     list-style: none;
     position: absolute;
-    right: -62px;
-    height: 24vh;
+    right: -63px;
+    height: 44vh;
     border-radius: 0;
     margin-top: 12px;
     width: 34vw;
+    border-radius: 19px;
 }
 
 }
@@ -601,7 +609,7 @@ background-color:#fff;
     {
         background:#212121;
         border-radius: 5px;
-        padding:20px;
+        padding:10px;
        
         display: flex;
     flex-direction: column;
@@ -611,7 +619,7 @@ background-color:#fff;
     position: absolute;
     right: -11px;
     height: 28vh;
-    border-radius: 0;
+    border-radius: 30px;
     margin-top: 12px;
     width: 34vw;
     }
