--- a/src/css/sponsor.css
+++ b/src/css/sponsor.css
@@ -83,10 +83,16 @@
     /* margin-bottom: 11px;
     padding-top: 20px; */
     margin: 5px 0 5px 0;
+    display: flex;
+    align-items: center;
 }
 .captcha-form{
     display: flex;
     margin-bottom: 16px;
+}
+.captcha-box{
+    display: flex;
+    align-items: center;
 }
 /* .pt-3{
     margin-top: 9px;
