--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1852,6 +1852,15 @@ a{
         font-size: 12px;
         /* margin-bottom: 23px; */
     }
+    .abstract-submission-date {
+        background: #0a0a0a8f;
+        height: 28px;
+        letter-spacing: 1px;
+        position: absolute;
+        bottom: 74px;
+        left: 0;
+        width: 100%;
+    }
     .common-btn {
         margin-bottom: 20px!important;
         margin-top: 15px;
@@ -2033,6 +2042,16 @@ a{
         display: flex;
         align-items: start;
         margin: 25px 0;
+    }
+
+    .abstract-submission-date {
+        background: #0a0a0a8f;
+        height: 28px;
+        letter-spacing: 1px;
+        position: absolute;
+        bottom: 71px;
+        left: 0;
+        width: 100%;
     }
     /* .home-register-step ul li {
         height: auto;
