--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1025,6 +1025,7 @@ a{
     }
 
 }
+
 @media only screen and (max-width : 1199px)
 {
     .home-banner .right .banner-title .banner-small {
@@ -1181,7 +1182,27 @@ a{
         font-size:14px;
     }
 }
-
+@media only screen and (max-width : 820px){
+    .common-btn{
+        padding: 3px 20px;
+    font-size: 12px;
+    margin-bottom: 2px;
+    }
+    .home-banner .right .banner-title .banner-small{
+        font-size: 19px;
+    line-height: 18px;
+    margin-bottom: 7px;
+    }
+    .abstract-submission-date {
+        background: #0a0a0a8f;
+        height: 26px;
+        letter-spacing: 1px;
+        position: absolute;
+        bottom: 80px;
+        left: 0;
+        width: 100%;
+    }
+}
 @media only screen and (max-width : 767px) {
     
     .Welcome-page .welcome-text
