--- a/src/css/common.css
+++ b/src/css/common.css
@@ -526,6 +526,11 @@ background-color:#fff;
     justify-content: center;
     color: #fff;
 }
+
+
+.phone-input-box input{
+    width: 100% !important;
+}
   /* -----common responsive css---- */
   @media only screen and (max-width : 1024px) {
 
