--- a/src/css/common.css
+++ b/src/css/common.css
@@ -18,10 +18,11 @@ body
 
 .abstracts-common-btn
 {
+    margin-top: 20px;
     color: #fff;
     background-color: #1b2a47;
     border: none;
-    border-radius: 5px;
+    /* border-radius: 5px; */
     font-weight: 600;
     font-size: 12px;
     padding: 5px;
