update content as on 7 sept

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,3 +1,8 @@
+
+.home-banner .container-home .inca-new-logo {
+    width:385px;
+    margin-right: 40px;
+}
 .home-banner
 {
     position: relative;
