--- a/src/css/home.css
+++ b/src/css/home.css
@@ -204,6 +204,108 @@
 .home-banner .home-schedule-desk{
   display:inline-block;
 }
+
+/* ---------------programme-glance----------------------- */
+.programme-glance
+{
+    margin-top: 110px;
+}
+.programme-glance .common-heading,.mix-guest-card .upper .common-heading
+{
+    font-size: 22px;
+    margin-bottom: 0;
+    font-weight: 400;
+    color: #fff;
+}
+.programme-glance-heading-wrapper
+{
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 30px;
+    margin-bottom: 20px;
+    background-color:#75b00f;
+    align-items: center;
+    border-radius: 10px;
+}
+.programme-glance-title
+{
+    margin-bottom: 0;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    color: #fff;
+
+}
+.programme-glance-wrapper
+{
+    margin-top: 20px;
+}
+.programme-glance-wrapper img
+{
+    width: 100%;
+    height: 100%;
+}
+.mix-guest
+{
+    margin-top: 100px;
+    background-color: aliceblue;
+    padding:70px 0;
+}
+.mix-guest .carousel-indicators [data-bs-target]
+{
+    height: 20px;
+    width: 20px;
+    background-color:#75b00f;
+    display: none;
+}
+
+.mix-guest-card
+{
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+    background-color: #fff;
+    
+}
+.mix-guest-card .upper
+{
+   background-color:#75b00f;
+   text-align: center;
+   padding: 10px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+.mix-guest-card .lower
+{
+    padding: 30px;
+}
+.carousel-control-next,
+.carousel-control-prev {
+    opacity: 1;
+    z-index: 3;
+}
+
+ .carousel-control-prev-icon,
+ .carousel-control-next-icon {
+    background-image: none;
+    height: 35px;
+    width: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    opacity: 1;
+    border-radius: 50%;
+    opacity: 1 !important;
+    color: #fff;
+    font-size: 25px;
+    transition: .3s;
+    background: #75b00f;
+}
+
+.mix-guest-card .carousel-control-prev-icon:hover,
+.mix-guest-card .carousel-control-next-icon:hover {
+    background:#75b00f;
+}
+
 /* -------home about------------- */
 .home-about-left img{
     border-radius: 25px;
