--- a/src/css/common.css
+++ b/src/css/common.css
@@ -485,7 +485,7 @@ header .nav-link.active
 {
 left: 0;
 margin: auto;
-position: fixed;
+position: sticky;
 top: 0;
 width: 100%;
 /* background:rgba(0,0,0,0.85); */
