--- a/src/css/home.css
+++ b/src/css/home.css
@@ -19,6 +19,12 @@
   color: #fff;
 }
 
+.home-banner .banner-header {
+    margin-top: 20px;
+    height: auto;
+    width: 100%;
+}
+
 .abstract-submission-date
 {
     background: #0a0a0a8f;
@@ -166,12 +172,17 @@
 {
     margin-top:16px;
 }
+.home-banner .banner-text{
+    margin-top: 20px;
+    text-align: center;
+    font-size: 22px;
+}
 .home-banner .count
 {
-    position: absolute;
-    right: 0;
+    /* position: absolute; */
+    /* right: 0; */
     display: flex;
-    right: 100px;
+    /* right: 100px; */
     bottom: -70px;
     box-shadow: 0px 15px 15px -10px rgb(0 0 0 / 15%);
     /* padding: 30px 20px 30px 20px; */
