--- a/src/css/home.css
+++ b/src/css/home.css
@@ -25,12 +25,15 @@
     width: 100%;
 }
 
-.abstract-submission-date
+.home-banner .inca-new-logo
+{
+    height: 180px;
+}.abstract-submission-date
 {
     background: #0a0a0a8f;
     height: 26px;
     letter-spacing: 1px;
-    position: absolute;
+    /* position: absolute; */
     bottom: 45px;
     left: 0;
     width: 100%;
