--- a/src/css/common.css
+++ b/src/css/common.css
@@ -434,6 +434,10 @@ textarea
   font-size: 12px;
 }
 
+.presentation-wrapper .btn-primary{
+   background: #75b00f; 
+   border: none;
+}
 
 
 /*-------------------------header ----------------*/
