--- a/src/css/common.css
+++ b/src/css/common.css
@@ -31,6 +31,7 @@ body
     font-size: 12px;
     padding: 5px;
     width: 140px;
+    text-decoration: none;
 
 }
 
@@ -437,6 +438,7 @@ textarea
 .presentation-wrapper .btn-primary{
    background: #75b00f; 
    border: none;
+   margin-bottom: 16px;
 }
 
 
